--- a/front-end/index.html
+++ b/front-end/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <title>Vite + Vue</title>
   </head>
-  <body class="w-screen h-screen  font-main bg-stone-900">
+  <body class="font-main bg-stone-900">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
